--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -1,3 +1,4 @@
+
 .main-page {
   background-color: #efefef;
   display: flex;
@@ -6,36 +7,38 @@
   width: 100%;
 }
 
-/* .main-page .div { */
-  /* background-color: #efefef; */
-  /* height: 1001px; */
-  /* height: 67px; */
-  /* overflow: hidden; */
-  /* position: relative; */
-  /* width: 100%; */
-/* } */
+.main-page .div {
+  width: 100%;
+}
 
 .main-page .group {
-  background-color: #ffd900;
+  background-color: #c8fe77;
   box-shadow: 0px 1px 0px #00000029;
-  height: 133px;
+  height: 60px;
   left: 0;
-  position: absolute;
+  position: relative;
   top: 0;
-  width: 100%;
 }
 
 .main-page .navbar {
   height: 32px;
-  left: 25%;
-  /* right: 50%; */
-  /* display: flex; */
-  
-  position: relative;
+  display: flex;
+  /* position: relative; */
   flex-direction: row;
-  justify-content: center;
-  top: 50px;
-  width: 972px;
+  justify-content: space-evenly;
+  /* top: 20px; */
+  align-self: center;
+  align-items: start;
+  /* align-items: ; */
+  /* margin-left: 50px;
+  margin-right: 50px; */
+  right: 0px;
+  left: 0px;
+  margin-right: 40%;
+  margin-left: 40%;
+  gap: 20px;
+  padding: 29px 35px 18px 35px;
+  width: 20%;
 }
 
 .main-page .blog {
@@ -43,14 +46,14 @@
   font-family: "DotGothic16-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 0;
+  /* left: 0; */
   letter-spacing: 2.4px;
   line-height: 34px;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 0;
   white-space: nowrap;
-  width: 66px;
+  /* width: 66px; */
 }
 
 .main-page .about {
@@ -58,14 +61,14 @@
   font-family: "DotGothic16-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 182px;
+  /* left: 182px; */
   letter-spacing: 2.4px;
   line-height: 34px;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 0;
   white-space: nowrap;
-  width: 84px;
+  /* width: 84px; */
 }
 
 .main-page .text-wrapper {
@@ -73,14 +76,14 @@
   font-family: "DotGothic16-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 382px;
+  /* left: 382px; */
   letter-spacing: 2.4px;
   line-height: 34px;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 0;
   white-space: nowrap;
-  width: 106px;
+  /* width: 106px; */
 }
 
 .main-page .text-wrapper-2 {
@@ -88,14 +91,14 @@
   font-family: "DotGothic16-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 604px;
+  /* left: 604px; */
   letter-spacing: 2.4px;
   line-height: 34px;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 0;
   white-space: nowrap;
-  width: 121px;
+  /* width: 121px; */
 }
 
 .main-page .text-wrapper-3 {
@@ -103,49 +106,51 @@
   font-family: "DotGothic16-Regular", Helvetica;
   font-size: 20px;
   font-weight: 400;
-  left: 841px;
+  /* left: 841px; */
   letter-spacing: 2.4px;
   line-height: 34px;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 0;
   white-space: nowrap;
-  width: 121px;
+  /* width: 121px; */
 }
 
-.main-page .overlap-group-wrapper {
+
+.bottom-navbar {
   height: 100px;
   left: 0;
-  position: fixed;
-  top: 901px;
-  width: 100%;
-}
-
-.main-page .overlap-group {
+  bottom: 0;
+  position: relative;
+  display: flex;
+  /* top: 901px; */
+  width: 100%; 
   background-color: #000000;
+
+}
+
+/* .main-page .overlap-group-wrapper { */
+  /* height: 100px;
+  left: 0;
+  position: relative;
+  top: 901px;
+  width: 100%; */
+/* } */
+
+/* .bottom-navbar .overlap-group { */
+  /* width: 100%;
+  position: absolute; */
+  /* left: 0;
+  bottom: 0; */
+  /* background-color: #000000; */
   /* height: 100px; */
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 120px;
-  text-align: center;
-}
-
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: #f5f5f5;
-  color: #000000;
-  text-align: center;
+  /* height: 50px; */
+  /* text-align: center; */
   
-}
+/* } */
 
 
-.main-page .text-wrapper-4 {
+.bottom-navbar .text-wrapper-4 {
   color: #ffffff;
   font-family: "Arial-NarrowBold", Helvetica;
   font-size: 12px;
@@ -160,15 +165,21 @@
   width: 142px;
 }
 
-.main-page .group-2 {
-  height: 18px;
+.bottom-navbar .group-2 {
+  height: 30px;
   left: 427px;
-  position: absolute;
+  position: relative;
   top: 31px;
   width: 595px;
+  position: relative;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  left: 36%;
+  right: 35%;
 }
 
-.main-page .text-wrapper-5 {
+.bottom-navbar .text-wrapper-5 {
   color: #ffffff;
   font-family: "DM Serif Display-Regular", Helvetica;
   font-size: 20px;
@@ -183,7 +194,7 @@
   width: 105px;
 }
 
-.main-page .text-wrapper-6 {
+.bottom-navbar .text-wrapper-6 {
   color: #ffffff;
   font-family: "DM Serif Display-Regular", Helvetica;
   font-size: 20px;
@@ -198,7 +209,7 @@
   width: 105px;
 }
 
-.main-page .text-wrapper-7 {
+.bottom-navbar .text-wrapper-7 {
   color: #ffffff;
   font-family: "DM Serif Display-Regular", Helvetica;
   font-size: 20px;
@@ -213,7 +224,7 @@
   width: 105px;
 }
 
-.main-page .text-wrapper-8 {
+.bottom-navbar .text-wrapper-8 {
   color: #ffffff;
   font-family: "DM Serif Display-Regular", Helvetica;
   font-size: 20px;
@@ -228,7 +239,7 @@
   width: 105px;
 }
 
-.main-page .text-wrapper-9 {
+.bottom-navbar .text-wrapper-9 {
   color: #ffffff;
   font-family: "DM Serif Display-Regular", Helvetica;
   font-size: 20px;
@@ -358,7 +369,7 @@
 
 
 .article-page .place-image-here {
-  background-color: #ffd900;
+  background-color: #c8fe77;
   border-radius: 32px;
   box-shadow: 12px 32px 80px -20px #0000001f;
   height: 164px;
@@ -369,7 +380,7 @@
 }
 
 .article-page .place-image-here-2 {
-  background-color: #ffd900;
+  background-color: #c8fe77;
   border-radius: 32px;
   box-shadow: 12px 32px 80px -20px #0000001f;
   height: 89px;
@@ -402,7 +413,7 @@
 }
 
 .article-page .place-image-here-5 {
-  background-color: #ffd900;
+  background-color: #c8fe77;
   border-radius: 32px;
   box-shadow: 12px 32px 80px -20px #0000001f;
   height: 196px;
@@ -522,7 +533,7 @@
 }
 
 .article-page .navbar-wrapper {
-  background-color: #ffd900;
+  background-color: #c8fe77;
   box-shadow: 0px 1px 0px #00000029;
   height: 133px;
   left: 0;
@@ -650,3 +661,280 @@
   width: 561px;
 }
 
+.blog-page {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+
+
+  position: absolute;
+  width: 100%;
+  top: 60px;
+  /* display: flex; */
+  height: 86px;
+  /* box-shadow: #c8fe77; */
+  /* box-shadow: 0px 1px 0px #00000029; */
+  /* left: 10%; */
+  /* right: 10%; */
+  
+}
+.blog-page .div-2 {
+  box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.16);
+  background-color: #c8fe77;
+  align-self: stretch;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px 60px;
+}
+@media (max-width: 991px) {
+  .blog-page .div-2 {
+    max-width: 100%;
+    padding: 0 20px;
+  }
+}
+.blog-page .span {
+  display: flex;
+  width: 921px;
+  max-width: 100%;
+  justify-content: space-between;
+  gap: 20px;
+  margin: 10px 0 6px;
+}
+@media (max-width: 991px) {
+  .blog-page .span {
+    flex-wrap: wrap;
+  }
+}
+.blog-page .div-3 {
+  color: #000;
+  text-align: center;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  font: 400 20px/170% DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-4 {
+  color: #000;
+  text-align: center;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  font: 400 20px/170% DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-5 {
+  color: #000;
+  text-align: center;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  font: 400 20px/170% DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-6 {
+  color: #000;
+  text-align: center;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  font: 400 20px/170% DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-7 {
+  color: #000;
+  text-align: center;
+  letter-spacing: 2.4px;
+  text-transform: uppercase;
+  font: 400 20px/170% DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .span-2 {
+  color: #000;
+  background-color: #c8fe77;
+  align-self: stretch;
+  /* width: 100%; */
+  justify-content: center;
+  align-items: start;
+  padding: 15px 60px;
+  font: 400 40px DotGothic16, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .span-2 {
+    max-width: 100%;
+    padding: 0 20px 0 30px;
+  }
+}
+.blog-page .span-3 {
+  border-radius: 50px;
+  align-self: center;
+  display: flex;
+  margin-top: 79px;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-left: 50px;
+  margin-right: 50px;
+  border: 2px solid #000;
+
+  gap: 20px;
+  padding: 29px 36px 18px 45px;
+  /* left: 5%; */
+  /* position: relative; */
+}
+@media (max-width: 991px) {
+  .blog-page .span-3 {
+    max-width: 100%;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    padding: 0 20px;
+  }
+}
+.blog-page .div-8 {
+  color: #0c0a0a;
+  text-align: right;
+  margin-top: 7px;
+  font: 600 32px Lexend Deca, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .span-4 {
+  align-self: stretch;
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 0%;
+  flex-direction: column;
+  align-items: start;
+}
+@media (max-width: 991px) {
+  .blog-page .span-4 {
+    max-width: 100%;
+  }
+}
+.blog-page .div-9 {
+  color: #0019f8;
+  align-self: stretch;
+  font: 400 32px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .div-9 {
+    max-width: 100%;
+  }
+}
+.blog-page .div-10 {
+  color: #3b40bb;
+  align-self: stretch;
+  margin-top: 33px;
+  font: 400 20px Lexend Deca, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .div-10 {
+    max-width: 100%;
+  }
+}
+.blog-page .span-5 {
+  color: #c72610;
+  border-radius: 100px;
+  border: 1px solid #c72610;
+  background-color: rgba(110, 235, 131, 0);
+  margin-top: 27px;
+  width: 145px;
+  max-width: 100%;
+  justify-content: center;
+  align-items: start;
+  padding: 11px 60px 11px 22px;
+  font: 500 13px Lexend Deca, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .span-5 {
+    padding: 0 20px;
+  }
+}
+.blog-page .div-11 {
+  background-color: #000;
+  align-self: stretch;
+  display: flex;
+  margin-top: 447px;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  padding: 38px 60px 0;
+}
+@media (max-width: 991px) {
+  .blog-page .div-11 {
+    max-width: 100%;
+    margin-top: 40px;
+    padding: 0 20px;
+  }
+}
+.blog-page .span-6 {
+  display: flex;
+  width: 557px;
+  max-width: 100%;
+  flex-direction: column;
+}
+.blog-page .span-7 {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+@media (max-width: 991px) {
+  .blog-page .span-7 {
+    max-width: 100%;
+    flex-wrap: wrap;
+  }
+}
+.blog-page .div-12 {
+  color: #fff;
+  text-align: center;
+  flex-grow: 1;
+  white-space: nowrap;
+  font: 400 20px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .div-12 {
+    white-space: initial;
+  }
+}
+.blog-page .div-13 {
+  color: #fff;
+  text-align: center;
+  font: 400 20px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-14 {
+  color: #fff;
+  text-align: center;
+  font: 400 20px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-15 {
+  color: #fff;
+  text-align: center;
+  font: 400 20px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+.blog-page .div-16 {
+  color: #fff;
+  text-align: center;
+  flex-grow: 1;
+  white-space: nowrap;
+  font: 400 20px DM Serif Display, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
+@media (max-width: 991px) {
+  .blog-page .div-16 {
+    white-space: initial;
+  }
+}
+.blog-page .div-17 {
+  color: #fff;
+  text-align: center;
+  align-self: center;
+  margin-top: 38px;
+  font: 700 12px/140% Arial, -apple-system, Roboto, Helvetica,
+    sans-serif;
+}
